--- a/trade/index.html
+++ b/trade/index.html
@@ -103,12 +103,11 @@
     <script src="https://parv66.tk/trade/trade.js"></script>
     <script src="https://parv66.tk/gui/itemdrag.js"></script>
     <script src="https://parv66.tk/gui/itemhover.js"></script>
-    <script> 
-        $(".toption").on("click", function() {
-        if($('#38').find('#currency').length == 1) {
-        var $el = $('.copperplusplus').clone();
-        $('#tbox2').append($el);
- }});
+    <script>
+         
+        $("#toption1").on("click", function() {
+        $("#currency").appendTo("#destination");});
+      
       </script>
     </body>
 </html>
