--- a/trade/index.html
+++ b/trade/index.html
@@ -103,11 +103,9 @@
     <script src="https://parv66.tk/trade/trade.js"></script>
     <script src="https://parv66.tk/gui/itemdrag.js"></script>
     <script src="https://parv66.tk/gui/itemhover.js"></script>
-    <script>
-         
-        $("#toption1").on("click", function() {
-        $("#currency").appendTo("#destination");});
-      
-      </script>
+    <script>$( document ).ready(function() {
+    $("#toption1").on("click", function() {
+    $("#currency").appendTo("#destination");})
+});</script>
     </body>
 </html>
