--- a/trade/index.html
+++ b/trade/index.html
@@ -105,7 +105,7 @@
     <script src="https://parv66.tk/gui/itemhover.js"></script>
     <script>$( document ).ready(function() {
     $("#toption1").on("click", function() {
-    $("#currency").appendTo("#destination");})
+    $("#currency").appendTo("#tbox1");})
 });</script>
     </body>
 </html>
