--- a/trade/index.html
+++ b/trade/index.html
@@ -40,22 +40,22 @@
   <div class="boxes2">
     <div class="box" id="1">
         <div class="item" id="currency" draggable="false">
-            <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+            <a class="currency curr" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="2">
         <div class="item" id="currency" draggable="false">
-            <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+            <a class="currency curr" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="3">
         <div class="item" id="currency" draggable="false">
-            <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+            <a class="currency curr" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="4">
         <div class="item" id="currency" draggable="false">
-            <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+            <a class="currency curr" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="5"></div>
@@ -105,7 +105,7 @@
     <script src="https://parv66.tk/gui/itemhover.js"></script>
     <script>$( document ).ready(function() {
     $("#toption1").on("click", function() {
-    $("#currency").appendTo("#tbox1");})
+    $(".curr").appendTo("#tbox1");})
 });</script>
     </body>
 </html>
