--- a/trade/index.html
+++ b/trade/index.html
@@ -103,9 +103,11 @@
     <script src="https://parv66.tk/trade/trade.js"></script>
     <script src="https://parv66.tk/gui/itemdrag.js"></script>
     <script src="https://parv66.tk/gui/itemhover.js"></script>
-    <script>$( document ).ready(function() {
-    $("#toption1").on("click", function() {
-    $(".curr").appendTo(".tbox1");})
-});</script>
+    <script>
+          $( document ).ready(function() {
+          $("#toption1").on("click", function() {
+          $(".curr").first().appendTo(".tbox1");})
+          });
+      </script>
     </body>
 </html>
