--- a/trade/index.html
+++ b/trade/index.html
@@ -18,11 +18,11 @@
     <div class="cage"><h1 class="white">Addons And Maps Download:</h1>
 <button id="toption0" class="toption">
     <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
-    <img class="tarrow" src="https://parv66.tk/gui/images/arrow.png" alt="">
+    <img class="tarrow" draggable="false" src="https://parv66.tk/gui/images/arrow.png" alt="">
 <a class="copperplusplus" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></button>
 <button id="toption1" class="toption">
     <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
-    <img class="tarrow" src="https://parv66.tk/gui/images/arrow.png" alt="">
+    <img class="tarrow" draggable="false" src="https://parv66.tk/gui/images/arrow.png" alt="">
     <a class="papple" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></button>
 <button id="toption2" class="toption"></button>
 <button id="toption3" class="toption"></button>
@@ -30,7 +30,7 @@
 <div class="main1">
      <h1 style="text-align: center;">Trade Panel</h1>
      <div class="tradepanel">
-    <div class="box tbox1" id="38"></div><img class="arrow" src="https://parv66.tk/gui/images/arrow.png" alt=""> 
+    <div class="box tbox1" id="38"></div><img class="arrow" src="https://parv66.tk/gui/images/arrow.png" alt="" draggable="false"> 
     <div class="tbox2"></div>
     <button class="tbtn">Trade</button>
 </div>
@@ -39,23 +39,23 @@
   
   <div class="boxes2">
     <div class="box" id="1">
-        <div class="item" id="currency" draggable="false">
-            <a class="currency curr" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+        <div class="item curr" id="currency" draggable="false">
+            <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="2">
-        <div class="item" id="currency" draggable="false">
-            <a class="currency curr" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+        <div class="item curr" id="currency" draggable="false">
+            <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="3">
-        <div class="item" id="currency" draggable="false">
-            <a class="currency curr" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+        <div class="item curr" id="currency" draggable="false">
+            <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="4">
-        <div class="item" id="currency" draggable="false">
-            <a class="currency curr" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
+        <div class="item curr" id="currency" draggable="false">
+            <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
         </div>
       </div>
     <div class="box" id="5"></div>
@@ -103,11 +103,5 @@
     <script src="https://parv66.tk/trade/trade.js"></script>
     <script src="https://parv66.tk/gui/itemdrag.js"></script>
     <script src="https://parv66.tk/gui/itemhover.js"></script>
-    <script>
-          $( document ).ready(function() {
-          $("#toption1").on("click", function() {
-          $(".curr").first().appendTo(".tbox1");})
-          });
-      </script>
     </body>
 </html>
