--- a/trade/index.html
+++ b/trade/index.html
@@ -19,11 +19,11 @@
 <button id="toption0" class="toption">
     <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
     <img class="tarrow" draggable="false" src="https://parv66.tk/gui/images/arrow.png" alt="">
-<a class="copperplusplus" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></button>
+<a class="copperplusplus" id="copperplusplus" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></button>
 <button id="toption1" class="toption">
     <a class="currency" title="good o' gold coins"><span class="minetext currency" data-mctitle="currency"></span></a>
     <img class="tarrow" draggable="false" src="https://parv66.tk/gui/images/arrow.png" alt="">
-    <a class="papple" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></button>
+    <a class="papple" id="papple" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></button>
 <button id="toption2" class="toption"></button>
 <button id="toption3" class="toption"></button>
 </div></div>
