--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,15 +1,15 @@
 <html><head>
     <title>e</title>
-    <link rel="stylesheet" href="https://parv66.tk/trade/trade.css">
+    <link rel="stylesheet" href="https://parv66.tk/downloads/trade.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
     <link rel="stylesheet" href="https://parv66.tk/gui/itemdrag.css">
     <link rel="stylesheet" href="https://parv66.tk/gui/addonitems.css">
     <link rel="stylesheet" href="https://parv66.tk/gui/itemhover.css">
     <meta name="viewport" content="width=device-width">
-    <meta property="og:type" content="parv66.tk/trade/">
+    <meta property="og:type" content="parv66.tk/downloads/">
     <meta property="og:title" content="Addons!">
     <meta property="og:description" content="Download Page For Parv66's Latest Addons">
-    <meta property="og:url" content="https://parv66.tk/trade/">
+    <meta property="og:url" content="https://parv66.tk/downloads/">
     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
   </head>
   <body>
@@ -100,7 +100,7 @@
 </div>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://parv66.tk/trade/trade.js"></script>
+    <script src="https://parv66.tk/downloads/trade.js"></script>
     <script src="https://parv66.tk/gui/itemdrag.js"></script>
     <script src="https://parv66.tk/gui/itemhover.js"></script>
     </body>
