--- a/downloads/index.html
+++ b/downloads/index.html
@@ -32,7 +32,7 @@
      <div class="tradepanel">
     <div class="box tbox1" id="38"></div><img class="arrow" src="https://parv66.tk/gui/images/arrow.png" alt="" draggable="false"> 
     <div class="tbox2"></div>
-    <button class="tbtn">Trade</button>
+    <button id="tbtn" class="tbtn">Trade</button>
 </div>
   
  <h1>Inventory</h1>
