--- a/downloads/index.html
+++ b/downloads/index.html
@@ -41,11 +41,18 @@
     <div class="box" id="1">
         <div class="item curr" id="currency" draggable="false">
             <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
-            <div class="number">64</div>
         </div>
       </div>
-    <div class="box" id="2"></div>
-    <div class="box" id="3"></div>
+    <div class="box" id="2">
+        <div class="item curr" id="currency" draggable="false">
+            <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
+        </div>
+      </div>
+    <div class="box" id="3">
+      <div class="item curr" id="currency" draggable="false">
+            <a class="currency" title="good o' gold coins" draggable="false"><span class="minetext currency" draggable="false" data-mctitle="currency"></span></a>
+        </div>
+      </div>
     <div class="box" id="4"></div>
     <div class="box" id="5"></div>
     <div class="box" id="6"></div>
