--- a/creations/index.html
+++ b/creations/index.html
@@ -2,9 +2,10 @@
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="creations.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
+    <link rel="stylesheet" href="https://parv66.tk/gui/addonitems.css">
     <meta property="og:type" content="parv66.tk/creations/">
-    <meta property="og:title" content="Awesome and cool and good and stuff">
-    <meta property="og:description" content="My *ahEm*- My- *cough-cough* Work i made (pls)">
+    <meta property="og:title" content="creatiiooonnnnssssss">
+    <meta property="og:description" content="Creations, am i right?">
     <meta property="og:url" content="https://parv66.tk/creations/">
     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
   </head>
@@ -14,8 +15,8 @@
     <div class="main1">
   <h1>Large Chest</h1>
   <div class="boxes">
-    <div class="box"><a class="copperplusplus" draggable="true" ondragstart="drag(event)" href="#" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></div>
-    <div class="box"><a class="papple" draggable="true" ondragstart="drag(event)" href="#" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></div>
+    <div class="box"><a class="copperplusplus" draggable="false" title="An Addon That Adds More Uses For Copper And New Mechanics!"><span class="minetext copperplusplus" data-mctitle="Copper++ Addon"></span></a></div>
+    <div class="box"><a class="papple" draggable="false" title="An Addon That Makes Apples Placeable!"><span class="minetext papple" data-mctitle="Placeable Apples Addon"></span></a></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
