--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ $(document).ready(function(){
 });
 </script>
   <script>
-document.querySelector(document).ready(function(){
+$( document ).ready.ready(function(){
   document.querySelector("#menutoggle").click(function(){
     document.querySelector("#menu").classList.toggle("overlay");
   });
