--- a/index.html
+++ b/index.html
@@ -74,19 +74,18 @@ $( document ).ready.ready(function(){
   <br>
    <div id="menu" class="menu overlay">
     <h3>Press <a id="menutogglev2" class="mcTextMineGold">Space</a> To Exit!</h3>
-            <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc'">home</button>
+            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc'">home</button>
             <br>
-            <button class="button" onclick="play();location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
+            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
             <br>
-            <button class="button" onclick="play();location.href = 'https://parv66.tk/creations/'" test="https://mcpedl.com/user/parv66_yt/">creations</button>
+            <button class="button mcbtn" onclick="location.href = 'https://parv66.tk/creations/'" test="https://mcpedl.com/user/parv66_yt/">creations</button>
             <br>
-            <button class="button" onclick="play();location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'">random</button>
+            <button class="button mcbtn" onclick="location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'">random</button>
             <br>
-            <button class="button" onclick="play();location.href = 'https://discordapp.com/users/622702599468220446/'">contact</button>
+            <button class="button mcbtn" onclick="location.href = 'https://discordapp.com/users/622702599468220446/'">contact</button>
             <br>
-            <button class="button" onclick="play();err()">???</button>
+            <button class="button mcbtn" onclick="play();err()">???</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
-     <audio id="buttonoofclick" src="oof.ogg"></audio>
      <audio id="errors" src="error.666.ogg"></audio>
    </div>
   <footer>
