--- a/404.html
+++ b/404.html
@@ -3,17 +3,16 @@
 <body>
   <head>
     <link rel="stylesheet" href="https://parv66.tk/style.css">
-    <script src="https://parv66.tk/clickingsound.js"></script>
-    <script src="https://parv66.tk/leave.js"></script>
+    <script src="https://parv66.tk/gui/mcbtnclick.js"></script>
   </head>
 <h1>Hey There! You Seem Lost...</h1>
 <h2>This Isn't The Page You're Looking For...</h2>
 <br>
-<button class="button" onclick="play();location.href = 'https://parv66.tk/'"> > Take Help</button>
+<button class="button" onclick="location.href = 'https://parv66.tk/'"> > Take Help</button>
 <br>
-<button class="button" href="#" onclick="play();leave();return false"> > Leave</button>
+<button class="button" href="#" onclick=""> > Leave</button>
 <br>
-<button class="button" onclick="play();location.href = '.'"> > Ignore</button>
+<button class="button" onclick="location.href = '.'"> > Ignore</button>
 <audio id="buttonclick" src="https://parv66.tk/random.click.ogg"></audio>
 <img class="fofimg" src="https://parv66.tk/shaded-refine.png" alt="fofhi" height="300px">
 </body>
