--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
      <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg" />
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="key.js"></script>
+     <script src="https://parv66.tk/gui/mcbtnclick.js"></script>
   </head>
  <body id="body">
   <script>
@@ -84,7 +85,7 @@ $( document ).ready.ready(function(){
             <br>
             <button class="button mcbtn" onclick="location.href = 'https://discordapp.com/users/622702599468220446/'">contact</button>
             <br>
-            <button class="button mcbtn" onclick="play();err()">???</button>
+            <button class="button mcbtn" onclick="err()">???</button>
      <audio id="buttonclick" src="random.click.ogg"></audio>
      <audio id="errors" src="error.666.ogg"></audio>
    </div>
