--- a/404.html
+++ b/404.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
   <head>
     <link rel="stylesheet" href="https://parv66.tk/style.css">
+    <title>Error: page does not exists</title>
     <script src="https://parv66.tk/gui/mcbtnclick.js"></script>
   </head>
+<body>
 <h1>Hey There! You Seem Lost...</h1>
 <h2>This Isn't The Page You're Looking For...</h2>
 <br>
