--- a/404.html
+++ b/404.html
@@ -9,9 +9,9 @@
 <h1>Hey There! You Seem Lost...</h1>
 <h2>This Isn't The Page You're Looking For...</h2>
 <br>
-<button class="button" onclick="location.href = 'https://parv66.tk/'"> > Take Help</button>
+<button class="button mcbtn" onclick="location.href = 'https://parv66.tk/'"> > Take Help</button>
 <br>
-<button class="button" href="#" onclick=""> > Leave</button>
+<button class="button mcbtn" href="#" onclick=""> > Leave</button>
 <br>
 <button class="button" onclick="location.href = '.'"> > Ignore</button>
 <audio id="buttonclick" src="https://parv66.tk/random.click.ogg"></audio>
