--- a/creations/index.html
+++ b/creations/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="creations.css">
     <link rel="stylesheet" href="https://parv66.tk/style.css">
     <link rel="stylesheet" href="https://parv66.tk/gui/addonitems.css">
+    <link rel="stylesheet" href="https://parv66.tk/gui/itemhover.css">
     <meta property="og:type" content="parv66.tk/creations/">
     <meta property="og:title" content="creatiiooonnnnssssss">
     <meta property="og:description" content="Creations, am i right?">
@@ -78,5 +79,6 @@
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="creations.js"></script>
+      <script src="https://parv66.tk/gui/itemhover.js"></script>
 
 </body></html>
