--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
   <img src="logo.png" class="logo">
   <h3>Press <a id="menutoggle" class="mcTextPurple">Space</a> To Open Menu!</h3>
    <div id="menu" class="menu overlay">
-    <h3>Press <a id="menutogglev2" class="mcTextMineGold">Space</a> To Exit!</h3>
-            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc'">home</button>
+    <h3>Press <a id="menutogglev2" class="mcTextMineGold">Space</a> To Exit!</h3>location.href = 'http://www.your_site.com';",1500
+            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc';",1500">home</button>
             <br>
-            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/about/'">about</button>
+            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/about/';",1500">about</button>
             <br>
-            <button class="button mcbtn" onclick="location.href = 'https://parv66.tk/creations/'" test="https://mcpedl.com/user/parv66_yt/">creations</button>
+            <button class="button mcbtn" onclick="location.href = 'https://parv66.tk/creations/';",1500" test="https://mcpedl.com/user/parv66_yt/">creations</button>
             <br>
-            <button class="button mcbtn" onclick="location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ'">random</button>
+            <button class="button mcbtn" onclick="location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';",1500">random</button>
             <br>
-            <button class="button mcbtn" onclick="location.href = 'https://discordapp.com/users/622702599468220446/'">contact</button>
+            <button class="button mcbtn" onclick="location.href = 'https://discordapp.com/users/622702599468220446/';",1500">contact</button>
             <br>
             <button class="button mcbtn" onclick="err()">???</button>
      <audio id="errors" src="error.666.ogg"></audio>
