--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <img src="logo.png" class="logo">
   <h3>Press <a id="menutoggle" class="mcTextPurple">Space</a> To Open Menu!</h3>
    <div id="menu" class="menu overlay">
-    <h3>Press <a id="menutogglev2" class="mcTextMineGold">Space</a> To Exit!</h3>location.href = 'http://www.your_site.com';",1500
+    <h3>Press <a id="menutogglev2" class="mcTextMineGold">Space</a> To Exit!</h3>
             <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc';",1500">home</button>
             <br>
             <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/about/';",1500">about</button>
