--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 <br>
 <button class="button mcbtn" onclick="location.href = 'https://parv66.tk/'"> > Take Help</button>
 <br>
-<button class="button mcbtn" href="#" onclick=""> > Leave</button>
+<button class="button mcbtn" href="chrome://inducebrowsercrashforrealz" onclick=""> > Leave</button>
 <br>
 <button class="button" onclick="location.href = '.'"> > Ignore</button>
 <audio id="buttonclick" src="https://parv66.tk/random.click.ogg"></audio>
