--- a/404.html
+++ b/404.html
@@ -6,15 +6,11 @@
     <script src="https://parv66.tk/gui/mcbtnclick.js"></script>
   </head>
 <body>
-<h1>Hey There! You Seem Lost...</h1>
-<h2>This Isn't The Page You're Looking For...</h2>
-<br>
-<button class="button mcbtn" onclick="location.href = 'https://parv66.tk/'"> > Take Help</button>
-<br>
-<button class="button mcbtn" href="chrome://inducebrowsercrashforrealz" onclick=""> > Leave</button>
-<br>
-<button class="button" onclick="location.href = '.'"> > Ignore</button>
-<audio id="buttonclick" src="https://parv66.tk/random.click.ogg"></audio>
-<img class="fofimg" src="https://parv66.tk/shaded-refine.png" alt="fofhi" height="300px">
+<button class="button mcbtn" onclick="location.href = 'https://parv66.tk/404/'">press this if you see this</button>
+  <script>
+  window.onload=function(){
+    location.href = "https://parv66.tk/404/";
+  }
+  </script>
 </body>
 </html>
