--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 <button class="button mcbtn" id="fofbtnerror" onclick="location.href = 'https://parv66.tk/404/'">press this if you see this</button>
   <script>
   window.onload=function(){
-    location.href = "https://parv66.tk/404/";
+    //location.href = "https://parv66.tk/404/";
     var FoFbtn = document.querySelector('#fofbtnerror');
     FoFbtn.style.display = "block";, 5000;
   }
