--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
     <script src="https://parv66.tk/gui/mcbtnclick.js"></script>
   </head>
 <body>
-<button class="button mcbtn" id="fofbtnerror" onclick="location.href = 'https://parv66.tk/404/'">press this if you see this</button>
+<button class="button mcbtn" id="fofbtnerror" style="display: none" onclick="location.href = 'https://parv66.tk/404/'">press this if you see this</button>
   <script>
   window.onload=function(){
     //location.href = "https://parv66.tk/404/";
