--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
      <meta name="title" content="PARV66.inc">
      <meta name="description" content="parv66.inc is a... thing.  yep a thing.    idk what else...    ok bye">
      <link rel="stylesheet" href="style.css">
-     <meta property="og:type" content="parv66.tk">
+     <meta property="og:type" content="parv66.github.io/parv66.inc">
      <meta property="og:title" content="PARV66.inc" />
      <meta property="og:description" content="PARV66.inc idk what else" />
-     <meta property="og:url" content="https://parv66.tk" />
-     <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg" />
+     <meta property="og:url" content="https://parv66.github.io/parv66.inc" />
+     <meta property="og:image" content="https://parv66.github.io/parv66.inc/parv66.uwu.jpg" />
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="key.js"></script>
-     <script src="https://parv66.tk/gui/mcbtnclick.js"></script>
+     <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
   </head>
  <body id="body">
   <img src="logo.png" class="logo">
@@ -47,7 +47,7 @@
             <br>
             <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/about/';",1500">about</button>
             <br>
-            <button class="button mcbtn" onclick="location.href = 'https://parv66.tk/creations/';",1500" test="https://mcpedl.com/user/parv66_yt/">creations</button>
+            <button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/creations/';",1500" test="https://mcpedl.com/user/parv66_yt/">creations</button>
             <br>
             <button class="button mcbtn" onclick="location.href = 'https://www.youtube.com/watch?v=dQw4w9WgXcQ';",1500">random</button>
             <br>
