--- a/404/index.html
+++ b/404/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://parv66.tk/style.css">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
     <title>Error: page does not exists</title>
-    <script src="https://parv66.tk/gui/mcbtnclick.js"></script>
+    <script src="https://parv66.github.io/parv66.inc/gui/mcbtnclick.js"></script>
   </head>
 <body>
 <h1>Hey There! You Seem Lost...</h1>
 <h2>This Isn't The Page You're Looking For...</h2>
 <br>
-<button class="button mcbtn" onclick="location.href = 'https://parv66.tk/';,1500"> > Take Help</button>
+<button class="button mcbtn" onclick="location.href = 'https://parv66.github.io/parv66.inc/';,1500"> > Take Help</button>
 <br>
 <button class="button mcbtn" onclick="location.href = 'chrome://inducebrowsercrashforrealz"> > Leave</button>
 <br>
 <button class="button" onclick="location.href = '.';,1500"> > Ignore</button>
-<audio id="buttonclick" src="https://parv66.tk/random.click.ogg"></audio>
-<img class="fofimg" src="https://parv66.tk/shaded-refine.png" alt="fofhi" height="300px">
+<audio id="buttonclick" src="https://parv66.github.io/parv66.inc/random.click.ogg"></audio>
+<img class="fofimg" src="https://parv66.github.io/parv66.inc/shaded-refine.png" alt="fofhi" height="300px">
 </body>
 </html>
