--- a/creations/index.html
+++ b/creations/index.html
@@ -1,17 +1,17 @@
 <html><head>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="creations.css">
-    <link rel="stylesheet" href="https://parv66.tk/style.css">
-    <link rel="stylesheet" href="https://parv66.tk/gui/addonitems.css">
-    <link rel="stylesheet" href="https://parv66.tk/gui/itemhover.css">
-    <meta property="og:type" content="parv66.tk/creations/">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/style.css">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/addonitems.css">
+    <link rel="stylesheet" href="https://parv66.github.io/parv66.inc/gui/itemhover.css">
+    <meta property="og:type" content="parv66.github.io/parv66.inc/creations/">
     <meta property="og:title" content="creatiiooonnnnssssss">
     <meta property="og:description" content="Creations, am i right?">
-    <meta property="og:url" content="https://parv66.tk/creations/">
-    <meta property="og:image" content="https://parv66.tk/parv66.uwu.jpg">
+    <meta property="og:url" content="https://parv66.github.io/parv66.inc/creations/">
+    <meta property="og:image" content="https://parv66.github.io/parv66.inc/parv66.uwu.jpg">
   </head>
   <body>
-   <img class="chest" src="https://parv66.tk/chest.png">
+   <img class="chest" src="https://parv66.github.io/parv66.inc/chest.png">
     <div id="minetip-tooltip" style="display: none; position: absolute; top: 273px; left: 313px;">Copper++ Addon</div>
     <div class="main1">
   <h1>Large Chest</h1>
@@ -79,6 +79,6 @@
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="creations.js"></script>
-      <script src="https://parv66.tk/gui/itemhover.js"></script>
+      <script src="https://parv66.github.io/parv66.inc/gui/itemhover.js"></script>
 
 </body></html>
